--- a/Raul/static/Raul/main.css
+++ b/Raul/static/Raul/main.css
@@ -1,9 +1,10 @@
-html,body{
+
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
+
+  html,body{
     margin:0;
     padding:0;
-    height:100%;
-    font-family: 'Roboto', sans-serif;
-    overflow-x: hidden;
+    height:100%;font-family: 'Oswald', sans-serif;    overflow-x: hidden;
     background-color: #595959;
     scroll-behavior: smooth;
     scroll-snap-type: mandatory;
@@ -132,8 +133,7 @@ nav ul li a:hover{
     z-index: 1;
     display: grid;
     grid-template-columns: 47.5% 5% 47.5%;
-    font-family: 'Roboto', sans-serif;
-}
+    font-family: 'Oswald', sans-serif;}
 
 .loginText input[type=email]{
     background:transparent;
@@ -180,8 +180,7 @@ nav ul li a:hover{
 
 .loginText input[type=submit]{
     background:transparent;
-    font-family: 'Roboto', sans-serif;
-    outline: none;
+    font-family: 'Oswald', sans-serif;    outline: none;
     border: none;
     color: white;
     transition: 0.5s ease;
@@ -255,8 +254,7 @@ nav ul li a:hover{
 
 .signUp input[type=submit]{
     background:transparent;
-    font-family: 'Roboto', sans-serif;
-    outline: none;
+    font-family: 'Oswald', sans-serif;    outline: none;
     border: none;
     color: white;
     transition: 0.5s ease;
@@ -441,7 +439,7 @@ nav ul li a:hover{
         left:0;
         text-align: center;
         color:white;
-        font-family:'Roboto';
+        font-family: 'Oswald', sans-serif;
         font-weight:700;
     }
 
@@ -466,8 +464,8 @@ nav ul li a:hover{
 
     .furnitureHeading{
         font-size:3.5em;
-        font-family: 'Roboto Condensed';
-        margin-top:3%; 
+        font-family: 'Oswald', sans-serif;
+        margin-top:3%;
         color: white;
         opacity: 1;
         margin-right:auto;
@@ -477,12 +475,12 @@ nav ul li a:hover{
 
     .linksShop{
         font-size:0.1em;
-        font-family:'Roboto';
+        font-family: 'Oswald', sans-serif;
         font-weight: 700;
         letter-spacing: 0.18em;
         text-align: center;
         color: whitesmoke;
-        font-family: 'Roboto Condensed';
+        font-family: 'Oswald', sans-serif;
     }
 
     .linksShop a{
@@ -492,12 +490,12 @@ nav ul li a:hover{
 
     .linksShop a:hover{
         color: black;
-        font-family: 'Roboto Condensed';
+        font-family: 'Oswald', sans-serif;
     }
 
     .shopNow {
         font-size:0.2em;
-        font-family:'Roboto';
+        font-family: 'Oswald', sans-serif;
         letter-spacing: 2.2em;
         font-weight: 700;
         text-align: center;
@@ -542,7 +540,7 @@ nav ul li a:hover{
         width:80%;
         padding: 16px 32px 16px 32px;
         font-size: 5em;
-        font-family: 'Roboto Condensed';
+        font-family: 'Oswald', sans-serif;
         background-color: white;
         color:black;  
         display: none;
@@ -676,7 +674,7 @@ nav ul li a:hover{
         left:0;
         text-align: center;
         color:white;
-        font-family:'Roboto';
+        font-family: 'Oswald', sans-serif;
         font-weight:700;
     }
 
