--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -29,14 +29,12 @@
             <p>
                 cafe flor
             </p>
-
             <p>
                 raul
             </p>
 
-            <p>
-                third
-            </p>
+
+
 
         </div>
         <a href="{% url 'logout' %}"> <p>Logout </p></a>
@@ -135,7 +133,7 @@
     <div class ="bannerHead" id = "mainBanner">
         <video src="{% static 'Raul/Images/Merch Video V 5.m4v' %}" autoplay loop muted id = "videoBG"></video>
         <div class = "bannerHeading">
-            <figcaption> r a ù l  <br> <a href="#shop"><button>a click away from perfect arrangements</button></a></figcaption>
+            <figcaption> r a ù l  <br> <a href="#shop"><button> explore the shop </button></a></figcaption>
         </div>
     </div>
 
