--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -4,7 +4,7 @@
 <head>
     <style>
         body {
-            background-color: blue;
+            background-color: #595959;
             margin:0px;
             font-family: 'Ubuntu', sans-serif;
             background-size: 100% 110%;
