--- a/Raul/templates/Raul/cart.html
+++ b/Raul/templates/Raul/cart.html
@@ -1,5 +1,7 @@
 
-
+{% extends "Raul/base.html" %}
+{% block content %}
+{% load crispy_forms_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -76,6 +78,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
+{% endblock %}
+
 
 
 
