--- a/Raul/templates/Raul/cart.html
+++ b/Raul/templates/Raul/cart.html
@@ -68,7 +68,7 @@
                             <div class="summary-item"><span class="text">Discount</span><span class="price">$0</span></div>
                             <div class="summary-item"><span class="text">Shipping</span><span class="price">$0</span></div>
                             <div class="summary-item"><span class="text">Total</span><span class="price">${{ cart.total  }}</span></div>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Checkout</button>
+                            <a type="button" class="btn btn-primary btn-lg btn-block"  href="{% url 'checkout'  %}"> Checkout</a>
                         </div>
                     </div>
                 </div>
