--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,6 +1,3 @@
-{% extends "Raul/base.html" %}
-{% block content %}
-{% load crispy_forms_tags %}
 
 
 <head>
@@ -22,7 +19,10 @@
             height: 550px;
             margin-top: auto;
             margin-bottom: auto;
-<<<<<<< Updated upstream
+            position: fixed;
+            bottom: 200px;
+            right: 700px;
+Updated upstream
             background: #c8aa00;
             position: fixed;
             bottom: 200px;
@@ -152,4 +152,3 @@
     }
 </script>
 </body>
-{% endblock %}
