--- a/orders/templates/orders/Checkout.html
+++ b/orders/templates/orders/Checkout.html
@@ -1,12 +1,46 @@
 {% extends "Raul/base.html" %}
-{% block content %}
 {% load crispy_forms_tags %}
 
-    <form method="POST" action="{% url 'ajax-user-address' %}?next=checkout">
-        {% csrf_token %}
-        {{ address_form|crispy}}
-        <input type="submit" class="btn btn-default" value="Add Address">
-</form>
 
+
+{% block content %}
+
+
+{% if current_addresses %}
+<div class='col-sm-6'>
+    <h3>Shipping Addresses</h3>
+{% for address in current_addresses %}
+
+    <li id="{{ address.id }}"> {{ address.get_address }}</li>
+
+{% endfor %}
+</div>
+{% endif %}
+
+
+{% if address_form %}
+<div class='col-sm-6'>
+    <h3>Add New Address</h3>
+    <form method="POST" action="{% url 'ajax_add_user_address' %}?next=checkout">{% csrf_token %}
+        {{ address_form.as_p}}
+
+    <input type="submit" class="btn btn-default" value="Add Address"/>
+</form>
+</div>
+{% endif %}
+
+<div class="row">
+    {% if billing_addresses %}
+    <div class='col-sm-6'>
+        <h3>Billing Addresses</h3>
+        {% for address in billing_addresses %}
+
+
+        <li id="{{ address.id }}"> {{ address.get_address }}</li>
+
+        {% endfor %}
+    </div>
+    {% endif %}
+</div>
 
 {% endblock %}
