--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,7 +1,12 @@
+{% extends "Raul/base.html" %}
+{% block content %}
+{% load crispy_forms_tags %}
 
+<!DOCTYPE html>
+<html>
 
 <head>
-    <title>Register</title>
+    <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
@@ -19,20 +24,8 @@
             height: 550px;
             margin-top: auto;
             margin-bottom: auto;
-            position: fixed;
-            bottom: 200px;
-            right: 700px;
-Updated upstream
             background: #c8aa00;
-            position: fixed;
-            bottom: 200px;
-            right: 700px;
-            /*width: 300px;*/
-            border: 3px solid #73AD21;
-=======
-            background: white;
             position: relative;
->>>>>>> Stashed changes
             display: flex;
             justify-content: center;
             flex-direction: column;
@@ -96,7 +89,7 @@ Updated upstream
                     {% csrf_token %}
                     <div class="input-group mb-3">
                         <div class="input-group-append">
-                            <span class="input-group-text" ><i class="fas fa-user" ></i></span>
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
                         {{form.username}}
                     </div>
@@ -152,3 +145,24 @@ Updated upstream
     }
 </script>
 </body>
+</html>
+
+
+<!--<h3>Register</h3>-->
+
+<!--<form method="Post" action="">-->
+<!--    {% csrf_token %}-->
+<!--    {{form.username.label}}-->
+<!--    {{form.username}}-->
+
+<!--    {{form.email.label}}-->
+<!--    {{form.email}}-->
+
+<!--    {{form.password1.label}}-->
+<!--    {{form.password1}}-->
+
+<!--    {{form.password2.label}}-->
+<!--    {{form.password2}}-->
+<!--    <input type="submit" name="Create User">-->
+<!--</form>-->
+{% endblock %}
