email unique and required

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -25,7 +25,9 @@
             margin-top: auto;
             margin-bottom: auto;
             background: #c8aa00;
-            position: relative;
+            position: fixed;
+            bottom: 200px;
+            right: 600px;
             display: flex;
             justify-content: center;
             flex-direction: column;
