--- a/orders/templates/orders/Checkout.html
+++ b/orders/templates/orders/Checkout.html
@@ -1,46 +1,76 @@
-{% extends "Raul/base.html" %}
-{% load crispy_forms_tags %}
+
 
 
 
 {% block content %}
 
 
+{% if address_form %}
+<div class='col-sm-6 oull-right'>
+    <h3>Add New Address</h3>
+    <form method="POST" action='{% url "ajax_add_user_address" %}?next=checkout'>{% csrf_token %}
+        {{ address_form.as_p}}
+
+        <input type="submit" class="btn btn-default" value="Add Address"/>
+    </form>
+</div>
+{% endif %}
+
+
+
+
+<form method="POST" action=""> {% csrf_token %}
 {% if current_addresses %}
 <div class='col-sm-6'>
-    <h3>Shipping Addresses</h3>
+<h3> Shipping Addresses</h3>
 {% for address in current_addresses %}
-
-    <li id="{{ address.id }}"> {{ address.get_address }}</li>
+<input type="radio" name="shipping_address" value="{{ address_id }}" /> {{ address.get_address}} <br/>
 
 {% endfor %}
 </div>
 {% endif %}
 
 
-{% if address_form %}
-<div class='col-sm-6'>
-    <h3>Add New Address</h3>
-    <form method="POST" action="{% url 'ajax_add_user_address' %}?next=checkout">{% csrf_token %}
-        {{ address_form.as_p}}
 
-    <input type="submit" class="btn btn-default" value="Add Address"/>
-</form>
+
+<div class="row">
+
+{% if billing_addresses %}
+<div class="col-sm-6">
+<h3>Billing Addresses</h3>
+{% for address in billing_addresses %}
+    <input type="radio" name="billing_address" value="{{ address_id }}" /> {{ address.get_address}} <br/>
+
+{% endfor %}
 </div>
 {% endif %}
 
-<div class="row">
-    {% if billing_addresses %}
-    <div class='col-sm-6'>
-        <h3>Billing Addresses</h3>
-        {% for address in billing_addresses %}
 
 
-        <li id="{{ address.id }}"> {{ address.get_address }}</li>
-
-        {% endfor %}
-    </div>
-    {% endif %}
 </div>
+<!--    <div class="row">-->
+
+<!--        {% if billing_addresses %}-->
+<!--        <div class="col-sm-6">-->
+<!--            <h3>Billing Addresses</h3>-->
+<!--            {% for address in billing_addresses %}-->
+
+<!--            <li id="{{ address.id}}">{{ address.get_address }}</li>-->
+
+<!--            {% endfor %}-->
+<!--        </div>-->
+<!--        {% endif %}-->
+
+
+
+<!--    </div>-->
+
+    <div class="row" >
+        <h3>Credit Card Info</h3>
+
+    </div>
+
+
+</form>
 
 {% endblock %}
