--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -3,8 +3,13 @@
 {% load crispy_forms_tags %}
     <h1>{{user.username}}</h1>
     <h1>{{user.email}}</h1>
-    {% for user in userorders %}
-        {{ user.product }}
+    {% for item in UserOrders.all %}
+        {% for prod in item.cartitem_set.all %}
+            {{ prod }}
+            {{ prod.product.price}}
+            {{ prod.quantity}}
+        {% endfor %}
     {% endfor %}
+
 {% endblock %}
 
