--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -132,9 +132,18 @@
 </div>
 
 <div id = "category">
-    <p>New Arrivals</p>
     
-    <p>Décorative Accessories</p>
+    <p> New Arrivals </p>
+
+    <div class = "dropDownMenu">
+        <button class ="dropDownButton"> Décorative Accessories </button>
+        <div class = "dropDownContent">
+            <a href = "#"> Candlelight </a>
+            <a href = "#"> Decorative Objects </a>
+            <a href = "#"> Urn </a>
+            <a href = "#"> Vases and Cachepot</a>
+        </div>
+    </div>
     
     <p>Tabletop</p>
     
